--- a/index.html
+++ b/index.html
@@ -1,2 +1,4 @@
-<p>Hello! Here is a cats homeland! </p>
-<img src="image.heic">
+<div>
+  <title>Hello! Here is a cats homeland! </title>
+  <img src="image.heic">
+</div>
