--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <div>
   <title>Hello! Here is a cats homeland! </title>
-  <img src="image.heic">
+  <img src="https://github.com/64zhe/64zhe.github.io/blob/main/image.heic">
 </div>
