--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <div>
-  <title>Hello! Here is a cats homeland! </title>
-  <img src="image.heic">
+  <p>Hello! Here is a cats homeland! </p>
+  <img src="images/image.heic">
 </div>
