--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -37,8 +37,14 @@
       </aside>
     </main>
 
+
     <footer> <!-- 本站所有网页的统一页脚 -->
       <p>© 2050 某某保留所有权利</p>
     </footer>
   </body>
 </html>
+ -->
+
+
+
+
